--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Ball</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <div class="space">
+        <div class="ball">
+            <div class="ball_m"></div>
+            <div class="ball_s"></div>
+        </div>
+
+    </div>
+
+    <script src="./index.js" type="module"></script>
 </body>
 </html>
